--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+    body{
+        color:#fff;
+        background-color: #000;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@layer components {
+    .menuLink {
+        @apply cursor-pointer hover:text-cyan-600
+    }
+    .tags {
+        background-color:rgb(20, 19, 19);
+        margin-right: 0.5rem;
+        margin-top: 0.5rem;
+        padding:3px 10px;
+        display: inline-block;
+        color: darkcyan;
+        font-size: 12px;
+        font-weight: 600;
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+    .tags:last-child {
+        margin-right: 0;
+        
+    }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
